# ZoomyZoomyCamCam

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
config/: go2rtc.example.yaml
crates/core/: Cargo.toml
crates/core/examples/: lpr_probe.rs
crates/core/src/: api.rs  audio.rs  db.rs  genai.rs  go2rtc.rs  lib.rs  lpr.rs  main.rs  mqtt.rs  notify.rs  pipeline.rs  ptz.rs  record.rs  status.rs
crates/desktop/: Cargo.toml  tauri.conf.json
crates/desktop/icons/: gen_icons.py
crates/desktop/src/: main.rs
crates/detector/: Cargo.toml
crates/detector/src/: lib.rs
crates/gesture/: Cargo.toml
crates/gesture/src/: lib.rs
crates/motion/: Cargo.toml
crates/motion/src/: lib.rs
crates/recorder/: Cargo.toml
crates/recorder/src/: lib.rs
crates/spike-detect/: Cargo.toml  README.md
crates/spike-detect/src/: main.rs
crates/spike-live/: Cargo.toml  README.md
crates/spike-live/src/: main.rs
docs/: 01-research-and-architecture.md  02-competitor-feature-matrix.md  03-mqtt-and-webhooks.md
scripts/: mqtt_test_sub.py  wsdiscovery_probe.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  CameraDetail.tsx  Timeline.tsx  ZoneEditor.tsx  api.ts  styles.css
web/src/pages/: Alarms.tsx  Cameras.tsx  Events.tsx  Faces.tsx  Live.tsx  Recordings.tsx  Settings.tsx  Signals.tsx
