# ZoomyZoomyCamCam — Cargo workspace
# Self-hosted, cross-platform home surveillance platform.
#
# The workspace groups independent crates. Phase 0 ships two "spikes" that
# de-risk the two hardest parts of the project before we build the real core:
#   - spike-live   : camera ingest -> WebRTC live view (via go2rtc)
#   - spike-detect : YOLO object detection via ONNX Runtime, GPU per-OS
#
# Later phases will add: core (API + storage), recorder, motion-gate, detector.

[workspace]
resolver = "2"
members = [
    "crates/spike-live",
    "crates/spike-detect",
    "crates/detector",
    "crates/facerec",
    "crates/gesture",
    "crates/motion",
    "crates/recorder",
    "crates/core",
    "crates/desktop",
]

# Shared dependency versions live here so every crate stays in lockstep.
[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
image = "0.25"
ndarray = "0.16"
chrono = { version = "0.4", features = ["serde"] }
which = "7"
ureq = { version = "2", features = ["json"] }
tower = "0.5"
sha2 = "0.10"
sha1 = "0.10"
rumqttc = "0.24"
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
base64 = "0.22"
rand = "0.9"
fs2 = "0.4"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["ZoomyZoomyCamCam contributors"]
repository = "https://github.com/410dood/ZoomyZoomyCamCam"

# Optimize dependencies even in dev so video/inference spikes aren't painfully slow.
[profile.dev.package."*"]
opt-level = 2
