[package]
name = "zoomy"
version = "0.1.0"
description = "ZoomyZoomyCamCam core: API + storage + supervisors for go2rtc, recording, and AI detection"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "zoomy"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
image.workspace = true
chrono.workspace = true
which.workspace = true
ureq.workspace = true
tower.workspace = true

detector = { path = "../detector" }
motion = { path = "../motion" }
recorder = { path = "../recorder" }
