[package]
name = "zoomy-desktop"
version = "0.1.0"
description = "ZoomyZoomyCamCam desktop app: Tauri shell embedding the zoomy core"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
ureq.workspace = true

tauri = { version = "2", features = [] }

zoomy = { path = "../core" }
