[package]
name = "recorder"
version = "0.1.0"
description = "Continuous packet-copy segment recording from an RTSP restream, with retention"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
which.workspace = true
